# simple-mcp-server

./: Cargo.toml  Playground  README.md
src/: golem.rs  lib.rs  main.rs  manual_server.rs  rmcp_flattened.rs  rmcp_streamable_http.rs
src/mcp_adaptor/: agent_mcp_capability.rs  agent_mcp_prompt.rs  agent_mcp_resource.rs  agent_mcp_server.rs  agent_mcp_tool.rs  http_meta.rs  mcp_schema.rs  mod.rs
