[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
headers = "0.4.1"
uuid = { version = "1.21.0", features = ["v4"] }
