[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"


[dependencies]
rmcp = {version = "0.16.0", features = ["server", "transport-streamable-http-server"] }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
headers = "0.4.1"
uuid = { version = "1.21.0", features = ["v4"] }
tracing-subscriber = "0.3.22"
anyhow = "1.0.101"
tokio-util = "0.7.18"
chrono = "0.4.43"
tracing = "0.1.44"
url = "2.5.8"
async-trait = "0.1.89"

[[example]]
name = "manual_server"
path = "src/manual_server.rs"

[[example]]
name = "golem_server_rmcp"
path = "src/rmcp_streamable_http.rs"